# phototag

./: .gitignore  Makefile  README.md  RELEASE.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.local.json
src/phototag/: __init__.py  cli.py  jpg_handler.py  png_handler.py  utils.py
tests/: __init__.py  test_cli.py  test_jpg_handler.py  test_png_handler.py  test_utils.py
